@@ -8,6 +8,7 @@
 - Feature to enable authorization across parent domain and all subdomains.
 - Bee::getBaseDomain() and Bee::getBuiltDomain(...) for getting base domain and subdomain.
 - Bee::hashPassword(...) and AuthWorker::autologin(...) for automatic password hashing and auto-login.
+- AuthWorker::getAuthorizedUserId() for getting authorized user ID.
 
 #### Changed
 - Template::oneline() is now Template::flex(), allowing for dynamic creation of templates.
